feat: api implementation
